--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
+  <h1> De'Mario Holloway </h1>
+<h2>Freshman Computer science major at Virginia State University</h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
